--- a/src/styles/parameter_builder.css
+++ b/src/styles/parameter_builder.css
@@ -597,50 +597,3 @@ div.pb-arguments-container.readonly > pre {
 
 /** index.css overrides **/
 
-/** Dropdown **/
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #11242a;
-    width: auto;
-    /* min-width: 260px; */
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
-    z-index: 10;
-    min-width: fit-content;
-    padding-top: 0.51rem;
-    margin-left: -0.75rem;
-}
-
-.dropdown-content a {
-    padding: 0.75rem 4rem 0.75rem 0.75rem;
-    text-decoration: none;
-    display: block;
-    white-space: nowrap;
-    /* font-size: smaller; */
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #041018;
-    cursor: pointer;
-}
-
-.menu-stat-ro:hover {
-    cursor: pointer;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    /* background-color: #3e8e41; */
-}
-
